src/objects/FinServ__CustomFieldSet__mdt.object
<CustomObject>
    <description>Defines field sets for objects that do not support field sets by default.</description>
    <fields>
        <fullName>FinServ__ExcludedFields__c</fullName>
        <label>Excluded Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__FieldSetLabel__c</fullName>
        <label>Field Set Label</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SObjectName__c</fullName>
        <label>SObject Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__TwoColumnLayout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Two Column Layout</label>
        <type>Checkbox</type>
    </fields>
    <label>CustomFieldSet</label>
    <pluralLabel>CustomFieldSets</pluralLabel>
</CustomObject>